# Video2Anim

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  Video2Anim.cabal  flake.nix
app/: Main.hs
